--- a/Source/MBMS_APP/Admin.Master
+++ b/Source/MBMS_APP/Admin.Master
@@ -333,7 +333,7 @@
                         </asp:ContentPlaceHolder>
                         <footer class="content-footer footer bg-footer-theme">
                             <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
-                                <div class="mb-2 mb-md-0">
+                                <%--<div class="mb-2 mb-md-0">
                                     ©
                               <script>
                                   document.write(new Date().getFullYear());
@@ -354,7 +354,7 @@
                                         href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
                                         target="_blank"
                                         class="footer-link me-4">Support</a>
-                                </div>
+                                </div>--%>
                             </div>
                         </footer>
                         <!-- / Footer -->
