--- a/Source/MBMS_APP/Admin.Master
+++ b/Source/MBMS_APP/Admin.Master
@@ -109,13 +109,13 @@
                         <li class="menu-header small text-uppercase"><span class="menu-header-text">User</span></li>
                         <li class="menu-item">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bxs-user"></i>
+                                <i class="menu-icon tf-icons bx bx-user"></i>
 
                                 <div data-i18n="Admin">Admin</div>
                             </a>
                             <ul class="menu-sub">
                                 <li class="menu-item">
-                                    <a href="/admin-dashboard" class="menu-link">
+                                    <a href="/add-admin" class="menu-link">
                                         <i class="menu-icon tf-icons bx bxs-user-plus"></i>
                                         <div data-i18n="Add Admin">Add Admin</div>
                                     </a>
@@ -133,13 +133,13 @@
                         <!--Staff NavBar-->
                         <li class="menu-item">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bxs-user"></i>
+                               <i class="menu-icon tf-icons bx bx-user"></i>
 
                                 <div data-i18n="Staff">Staff</div>
                             </a>
                             <ul class="menu-sub">
                                 <li class="menu-item">
-                                    <a href="/admin-dashboard" class="menu-link">
+                                    <a href="/add-staff" class="menu-link">
                                         <i class="menu-icon tf-icons bx bxs-user-plus"></i>
                                         <div data-i18n="Add Staff">Add Staff</div>
                                     </a>
