--- a/Source/MBMS_APP/assets/css/custom.css
+++ b/Source/MBMS_APP/assets/css/custom.css
@@ -1,3 +1,14 @@
 ﻿.thead-bg-color {
-    background-color: #696cff;
+    background-color: #e7e7ff;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Hide arrows in Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
 }
