Role and Organization support data crud has been completed successfully. Remaining validation only

--- a/Source/MBMS_APP/Admin.Master
+++ b/Source/MBMS_APP/Admin.Master
@@ -6,9 +6,8 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
-    />
+        name="viewport"
+        content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <title></title>
     <meta name="description" content="" />
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -24,7 +23,7 @@
         <link href="<%= ResolveUrl("~/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css") %>" rel="stylesheet" />
         <link href="<%= ResolveUrl("~/assets/vendor/libs/apex-charts/apex-charts.css") %>" rel="stylesheet" />
         <link rel="icon" type="image/x-icon" href="<%= ResolveUrl("~/assets/img/favicon/favicon.ico") %>" />
-        <link href=<%= ResolveUrl("assets/vendor/fontawesome/css/all.css") %> rel="stylesheet" />
+        <link href='<%= ResolveUrl("assets/vendor/fontawesome/css/all.css") %>' rel="stylesheet" />
     </asp:ContentPlaceHolder>
 </head>
 <body>
@@ -162,11 +161,13 @@
                             <ul class="menu-sub">
                                 <li class="menu-item">
                                     <a href="/member" class="menu-link">
+                                        <i class="menu-icon tf-icons bx bxs-user-plus"></i>
                                         <div data-i18n="Error">View Member</div>
                                     </a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/add-member" class="menu-link">
+                                        <i class="menu-icon tf-icons bx bx-show-alt"></i>
                                         <div data-i18n="Under Maintenance">Add Member</div>
                                     </a>
                                 </li>
@@ -183,7 +184,7 @@
                             <ul class="menu-sub">
                                 <li class="menu-item">
                                     <a href="/purchase-orders" class="menu-link">
-                                        <i class="px-1 fa-solid fa-tags"> </i> 
+                                        <i class="px-1 fa-solid fa-tags"></i>
                                         <div data-i18n="Orders">Orders</div>
                                     </a>
                                 </li>
@@ -256,7 +257,51 @@
                                 </li>
                             </ul>
                         </li>
-
+                        <%--Support Data--%>
+                        <li class="menu-item">
+                            <a href="javascript:void(0);" class="menu-link menu-toggle">
+                               <i class="fa-solid fa-file-invoice"></i>
+                                <div data-i18n="Misc">‎‎‎ ‎‎‎ ‎ ‎‎     Support Data</div>
+                            </a>
+                            <ul class="menu-sub">
+                                <li class="menu-item">
+                                    <a href="/role" class="menu-link">
+                                        <i class="fa-regular fa-circle-user"></i>
+                                        <div data-i18n="Error">‎‎‎‎ ‎  Role</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/organization" class="menu-link">
+                                        <i class="bx bx-buildings"></i>
+                                        <div data-i18n="Under Maintenance"> ‎ ‎‎Organization</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/member" class="menu-link">
+                                        <i class="fa-solid fa-basket-shopping"></i>
+                                        <div data-i18n="Error">‎ ‎ ‎Goods</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/add-member" class="menu-link">
+                                        <i class="fa-solid fa-scale-balanced"></i>
+                                        <div data-i18n="Under Maintenance">‎ ‎  Measurement</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/member" class="menu-link">
+                                        <i class='bx bx-loader-circle'></i>
+                                        <div data-i18n="Error"> ‎‎‎  ‎   Purchase Status</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/add-member" class="menu-link">
+                                        <i class="fa-solid fa-indian-rupee-sign"></i>
+                                        <div data-i18n="Under Maintenance"> ‎ ‎  Expense  Types</div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </aside>
                 <div class="layout-page">
@@ -404,6 +449,8 @@
     <script src="<%= ResolveUrl("~/assets/js/main.js") %>" defer></script>
     <script src="<%= ResolveUrl("~/assets/js/dashboards-analytics.js") %>"></script>
     <script src="<%= ResolveUrl("~/WebUI/Admin/js/DeleteAdminConfirmation.js") %>"></script>
+    <script src="<%= ResolveUrl("~/assets/js/ui-modals.js") %>"></script>
+    <script src="<%= ResolveUrl("~/WebUI/Admin/js/DeleteAdminConfirmation.js") %>"</script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <script src="<%= ResolveUrl("~/assets/js/custom.js") %>"></script>
