view requested items added

--- a/Source/MBMS_APP/assets/css/custom.css
+++ b/Source/MBMS_APP/assets/css/custom.css
@@ -12,3 +12,7 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
     -moz-appearance: textfield;
 }
+
+input[disabled] {
+    cursor: not-allowed;
+}
