--- a/Source/MBMS_APP/Admin.Master
+++ b/Source/MBMS_APP/Admin.Master
@@ -22,6 +22,8 @@ data-template="vertical-menu-template-free">
         <link
             href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
             rel="stylesheet" />
+        <!-- Option 1: Include in HTML -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link href="<%= ResolveUrl("~/assets/vendor/fonts/boxicons.css") %>" rel="stylesheet" />
         <link href="<%= ResolveUrl("~/assets/vendor/css/core.css") %>" rel="stylesheet" class="template-customizer-core-css" />
         <link href="<%= ResolveUrl("~/assets/vendor/css/theme-default.css") %>" rel="stylesheet" class="template-customizer-theme-css" />
@@ -461,7 +463,7 @@ data-template="vertical-menu-template-free">
 
     <script src="<%= ResolveUrl("~/WebUI/Admin/js/DeleteAdminConfirmation.js") %>"></script>
     <script src="<%= ResolveUrl("~/assets/js/ui-modals.js") %>"></script>
-    <script src="<%= ResolveUrl("~/WebUI/Admin/js/DeleteAdminConfirmation.js") %>"</script>
+    <script src="<%= ResolveUrl("~/WebUI/Admin/js/DeleteAdminConfirmation.js") %>"></script>
     <script src="<%= ResolveUrl("~/WebUI/Staff/js/TriggerToast.js") %>"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="<%= ResolveUrl("~/assets/js/custom.js") %>"></script>
