--- a/Source/MBMS_APP/Admin.Master
+++ b/Source/MBMS_APP/Admin.Master
@@ -123,7 +123,7 @@ data-template="vertical-menu-template-free">
                         <li class="menu-header small text-uppercase"><span class="menu-header-text">User</span></li>
                         <li class="menu-item">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                                <i class="menu-icon tf-icons bx bx-user"></i>
+                                <i class="menu-icon tf-icons bx bxs-user"></i>
 
                                 <div data-i18n="Admin">Admin</div>
                             </a>
@@ -147,7 +147,7 @@ data-template="vertical-menu-template-free">
                         <!--Staff NavBar-->
                         <li class="menu-item">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                               <i class="menu-icon tf-icons bx bx-user"></i>
+                               <i class="menu-icon tf-icons bx bxs-user"></i>
 
                                 <div data-i18n="Staff">Staff</div>
                             </a>
